--- a/styles/Article.module.css
+++ b/styles/Article.module.css
@@ -1,7 +1,7 @@
 .grid {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   flex-wrap: wrap;
   max-width: 800px;
   margin-top: 1rem;
