--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -2,7 +2,7 @@
   background-color: #444;
   color: #eee;
   min-height: 100vh;
-  padding: 0 0.5rem;
+  /* padding: 0 0.5rem; */
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -11,12 +11,15 @@
 }
 
 .main {
-  padding: 2rem 0;
+  padding: 2rem;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  max-width: 90%;
+  margin: 0 auto;
+  width: 978px;
 }
 
 .footer {
